# brats-segmentation-pipeline

./: .gitignore  .nojekyll  README.md  _quarto.yml  index.html  index.qmd  requirements.txt  robots.txt  search.json  sitemap.xml  structure.txt  style.css  task1.html  task1.qmd  task2.html  task2.qmd  task3.html  task3.qmd
task4/: pyproject.toml
task4/brats_segmentation/: __init__.py  create_split.py  dataloader.py  dataloader_old.py  sample_split.py  test.py  test_dataloader.py  test_dataloader_old.py  train.py  train_job.sh
task4/brats_segmentation/logs/: brats_train_3813584.err  brats_train_3813825.err  brats_train_3813826.err  brats_train_3813828.err  brats_train_3813829.err  brats_train_3813829.out  brats_train_3813831.err  brats_train_3813831.out  brats_train_3813833.err  brats_train_3813833.out  brats_train_3813835.err  brats_train_3813835.out  brats_train_3813836.err  brats_train_3813836.out  brats_train_3813837.err  brats_train_3813837.out  brats_train_3813899.err  brats_train_3813899.out  brats_train_3813925.err  brats_train_3813925.out  brats_train_3813927.err  brats_train_3813927.out  brats_train_3813957.err  brats_train_3813957.out  brats_train_3813967.err  brats_train_3813967.out
task4/brats_segmentation/splits/split1/: test.txt  train.txt  validation.txt
task4/brats_segmentation/splits/split2/: test.txt  train.txt  validation.txt
task4/logs/: test_dataloader.err  test_dataloader.out
task4/scripts/: run_test_dataloader.sh
task4/src/: dataloader.py
task4/src/brats_segmentation/: dataloader.py
task4/tests/: test_dataloader.py
(+29 files in other folders)
