[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "brats-segmentation-pipeline"
version = "0.1.0"
description = "A pipeline for BraTS brain tumor segmentation."
authors = [{name = "Mina", email = "mina.naseh98@gmail.com"}]
dependencies = [
    "torch>=1.13.1",
    "monai>=1.1.0",
    "numpy>=1.21.0",
    "scipy>=1.7.0",
    "matplotlib>=3.4.0",
    "pytest>=6.0.0",
]

[tool.setuptools]
packages = ["brats_segmentation"]
package-dir = {"" = "src"}
